--- a/index.html
+++ b/index.html
@@ -13,39 +13,36 @@
         <img class="logo" src="./src/squealers_punainen_AI_resoluutio.png" />
       </div>
       <div class="topbar">
-        <a href="https://www.instagram.com/squealers_band/"
-          ><img src="./src/ig-min.png" alt="Instagram"
-        /></a>
-        <a href="https://www.facebook.com/profile.php?id=100087154827305"
-          ><img src="./src/fb-min.png" alt="Facebook"
-        /></a>
-        <a
-          href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
-          ><img src="./src/spotify-min.png" alt="Spotify"
-        /></a>
-        <a href="https://music.apple.com/us/artist/squealers/1652739782"
-          ><img src="./src/itunes-min.png" alt="Apple Music"
-        /></a>
-        <a href="https://www.youtube.com/@Squealers_band"
-          ><img src="./src/tube-min.png" alt="YouTube"
-        /></a>
-        <a href="https://www.deezer.com/en/artist/188899167"
-          ><img src="./src/deezer-min.png" alt="Deezer"
-        /></a>
+        <div>
+          <h2>Listen now!</h2>
+          <a
+            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
+            ><img src="./src/spotify-min.png" alt="Spotify"
+          /></a>
+          <a href="https://music.apple.com/us/artist/squealers/1652739782"
+            ><img src="./src/itunes-min.png" alt="Apple Music"
+          /></a>
+          <a href="https://www.youtube.com/@Squealers_band"
+            ><img src="./src/tube-min.png" alt="YouTube"
+          /></a>
+          <a href="https://www.deezer.com/en/artist/188899167"
+            ><img src="./src/deezer-min.png" alt="Deezer"
+          /></a>
+        </div>
+        <div>
+          <h2>Follow us!</h2>
+          <a href="https://www.instagram.com/squealers_band/"
+            ><img src="./src/ig-min.png" alt="Instagram"
+          /></a>
+          <a href="https://www.facebook.com/profile.php?id=100087154827305"
+            ><img src="./src/fb-min.png" alt="Facebook"
+          /></a>
+        </div>
       </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-          tincidunt ac purus id convallis. Donec rhoncus arcu tortor, non
-          tristique quam imperdiet at. Vivamus tristique lorem velit, vitae
-          interdum tellus congue sit amet. Sed fringilla ex vitae aliquam
-          dapibus.
-        </p>
-      </div>
-      <div>
+
+      <div class="mediadiv">
         <iframe
-          width="560"
-          height="315"
+          class="embedtube"
           src="https://www.youtube.com/embed/5ZC54P95w2U?si=ByGWfodqXNRsOOXe&amp;start=467"
           title="YouTube video player"
           frameborder="0"
@@ -56,6 +53,13 @@
       </div>
       <div>
         <img class="bandpic" src="src/testivedos.JPG" />
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            tincidunt ac purus id convallis. Donec rhoncus arcu tortor, non
+            tristique quam imperdiet at.
+          </p>
+        </div>
       </div>
     </div>
   </body>
