Css täysin uusiksi ja siistimmin

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <div class="main">
-      <div>
-        <img class="logo" src="./src/squealers_punainen_AI_resoluutio.png" />
-      </div>
+      <img class="logo" src="./src/squealers_punainen_AI_resoluutio.png" />
       <div class="topbar">
         <div>
           <h2>Listen now!</h2>
@@ -40,27 +38,24 @@
         </div>
       </div>
 
-      <div class="mediadiv">
-        <iframe
-          class="embedtube"
-          src="https://www.youtube.com/embed/5ZC54P95w2U?si=ByGWfodqXNRsOOXe&amp;start=467"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-      </div>
-      <div>
-        <img class="bandpic" src="src/testivedos.JPG" />
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            tincidunt ac purus id convallis. Donec rhoncus arcu tortor, non
-            tristique quam imperdiet at.
-          </p>
-        </div>
-      </div>
+      <iframe
+        class="embedtube"
+        src="https://www.youtube.com/embed/5ZC54P95w2U?si=ByGWfodqXNRsOOXe&amp;start=467"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+
+      <img class="bandpic" src="src/testivedos.JPG" />
+      <p>
+        Squealers is a rock ’n’ roll band from Jyväskylä, Finland. Our focus is
+        on writing tight, riff-driven original music. Our 2023 debut EP Big Dog
+        introduced a sound rooted in a simple yet effective groove. Heavily
+        influenced by AC/DC, we mix in a few covers live — not for show, but as
+        a nod to our roots. No flash, no hype — just solid rock played right.
+      </p>
     </div>
   </body>
 </html>
