--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <body>
     <div class="main">
       <img class="logo" src="./src/squealers_punainen_AI_resoluutio.png" />
+      <a href="mailto:squealersbandi@gmail.com" class="email"
+        >squealersbandi@gmail.com</a
+      >
       <div class="topbar">
         <div>
           <h2>Listen now!</h2>
