--- a/forgig/index.html
+++ b/forgig/index.html
@@ -47,7 +47,7 @@
           <h1 id="linkkeja">Linkkejä</h1>
           <h3>Musiikki</h3>
           <a
-            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
+            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=b0_13HrZSgKzfPXinkacUA"
             ><img src="../src/spotify-min.png" alt="Spotify"
           /></a>
           <a href="https://music.apple.com/us/artist/squealers/1652739782"
@@ -63,9 +63,19 @@
           <a href="https://www.instagram.com/squealers_band/"
             ><img src="../src/ig-min.png" alt="Instagram"
           /></a>
-          <a href="https://www.facebook.com/profile.php?id=100087154827305"
+          <a href="https://www.facebook.com/squealersband"
             ><img src="../src/fb-min.png" alt="Facebook"
           /></a>
+          <h3>Tekstinä</h3>
+          <p>
+            https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=b0_13HrZSgKzfPXinkacUA
+            <br />
+            https://music.apple.com/us/artist/squealers/1652739782<br />
+            https://www.youtube.com/@Squealers_band<br />
+            https://www.deezer.com/en/artist/188899167<br />
+            https://www.instagram.com/squealers_band/<br />
+            https://www.facebook.com/squealersband<br />
+          </p>
         </div>
       </div>
       <div>
