"Linkit tekstinä" pois

--- a/forgig/index.html
+++ b/forgig/index.html
@@ -66,16 +66,6 @@
           <a href="https://www.facebook.com/squealersband"
             ><img src="../src/fb-min.png" alt="Facebook"
           /></a>
-          <h3>Tekstinä</h3>
-          <p>
-            https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=b0_13HrZSgKzfPXinkacUA
-            <br />
-            https://music.apple.com/us/artist/squealers/1652739782<br />
-            https://www.youtube.com/@Squealers_band<br />
-            https://www.deezer.com/en/artist/188899167<br />
-            https://www.instagram.com/squealers_band/<br />
-            https://www.facebook.com/squealersband<br />
-          </p>
         </div>
       </div>
       <div>
@@ -117,7 +107,7 @@
         </p>
       </div>
       <div>
-        <h1 id="tekniikka">Tekniikka</h1>
+        <h1 id="tekniikka">Tekniikka TODO: oikea</h1>
         <img src="../src/stageplot.jpg" />
       </div>
       <div>
