sulkeutuvat elementit bioille alasivulla

--- a/forgig/index.html
+++ b/forgig/index.html
@@ -78,16 +78,25 @@
       <div id="biot">
         <h1>Bio-versiot TODO: suomeksi ja englanniksi</h1>
         <h3>Lyhyt versio</h3>
-        <p>
+        <details>
+          <summary>Lyhyt versio suomeksi</summary>
+          Lyhyt bio suomeksi.
+        </details>
+        <details>
+          <summary>Pitkä versio suomeksi</summary>
+          Pitkä bio suomeksi.
+        </details>
+        <details>
+          <summary>Short version in english</summary>      
           Squealers is a rock ’n’ roll band from Jyväskylä, Finland. Our focus
           is on writing tight, riff-driven original music. Our 2023 debut EP Big
           Dog introduced a sound rooted in a simple yet effective groove.
           Heavily influenced by AC/DC, we mix in a few covers live — not for
           show, but as a nod to our roots. No flash, no hype — just solid rock
           played right.
-        </p>
-        <h3>Pitkä versio</h3>
-        <p>
+        </details>
+        <details>
+          <summary>Long version in english</summary>
           Squealers is a rock ‘n’ roll band from Jyväskylä, Finland, dedicated
           to writing and performing original music with a strong, no-nonsense
           approach. Our sound is rooted in sharp riffs, tight groove, and the
@@ -104,7 +113,7 @@
           with honest music, tight playing, and a grounded attitude. For us,
           rock 'n' roll is about substance, not spectacle — and we’re just
           getting started.
-        </p>
+        </details>
       </div>
       <div>
         <h1 id="tekniikka">Tekniikka TODO: oikea</h1>
