--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
       <img class="bandpic" src="src/testivedos.JPG" />
       <p>
-        Squealers is a rock ’n’ roll band from Jyväskylä, Finland. Our focus is
-        on writing tight, riff-driven original music. Our 2023 debut EP Big Dog
-        introduced a sound rooted in a simple yet effective groove. Heavily
-        influenced by AC/DC, we mix in a few covers live — not for show, but as
-        a nod to our roots. No flash, no hype — just solid rock played right.
+        Squealers is a rock ’n’ roll band from Jyväskylä, Finland. 
+        Our focus is on writing tight, riff-driven rock music. 
+        Our 2023 debut EP Big Dog introduced a sound rooted in a simple yet effective groove. 
+        Heavily influenced by AC/DC, we mix in covers with original compositions in our live show. 
+        No flash, no hype — just solid rock, played right and played loud.
       </p>
     </div>
   </body>
