Logot svg:nä ja pääsivun järjestys uusiksi

--- a/index.html
+++ b/index.html
@@ -1,70 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Squealers</title>
-    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="main">
-      <img class="logo" src="./src/squealers_punainen_AI_resoluutio.png" />
-      <a href="mailto:squealersbandi@gmail.com" class="email"
-        >squealersbandi@gmail.com</a
-      >
-      <div class="topbar">
-        <div>
-          <h2>Listen now!</h2>
-          <a
-            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
-            ><img src="./src/spotify-min.png" alt="Spotify"
-          /></a>
-          <a href="https://music.apple.com/us/artist/squealers/1652739782"
-            ><img src="./src/itunes-min.png" alt="Apple Music"
-          /></a>
-          <a href="https://www.youtube.com/@Squealers_band"
-            ><img src="./src/tube-min.png" alt="YouTube"
-          /></a>
-          <a href="https://www.deezer.com/en/artist/188899167"
-            ><img src="./src/deezer-min.png" alt="Deezer"
-          /></a>
-        </div>
-        <div>
-          <h2>Follow us!</h2>
-          <a href="https://www.instagram.com/squealers_band/"
-            ><img src="./src/ig-min.png" alt="Instagram"
-          /></a>
-          <a href="https://www.facebook.com/profile.php?id=100087154827305"
-            ><img src="./src/fb-min.png" alt="Facebook"
-          /></a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Squealers</title>
+  <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="main">
+    <img class="logo" src="./src/squealers_logo.svg" />
+    <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
+    <div class="topbar">
+      <div>
+        <h2>Listen now!</h2>
+        <a
+          href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"><img
+            src="./src/spotify-min.png" alt="Spotify" /></a>
+        <a href="https://music.apple.com/us/artist/squealers/1652739782"><img src="./src/itunes-min.png"
+            alt="Apple Music" /></a>
+        <a href="https://www.youtube.com/@Squealers_band"><img src="./src/tube-min.png" alt="YouTube" /></a>
+        <a href="https://www.deezer.com/en/artist/188899167"><img src="./src/deezer-min.png" alt="Deezer" /></a>
       </div>
-
-      <iframe
-        class="embedtube"
-        src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-      ></iframe>
-
-      <img class="bandpic" src="src/testivedos.JPG" />
-      <p>
-        Squealers is a rock ’n’ roll band from Jyväskylä, Finland. 
-        Our focus is on writing tight, riff-driven rock music. 
-        Our 2023 debut EP Big Dog introduced a sound rooted in a simple yet effective groove. 
-        Heavily influenced by AC/DC, we mix in covers with original compositions in our live show. 
-        No flash, no hype — just solid rock, played right and played loud.
-      </p>
+      <div>
+        <h2>Follow us!</h2>
+        <a href="https://www.instagram.com/squealers_band/"><img src="./src/ig-min.png" alt="Instagram" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100087154827305"><img src="./src/fb-min.png"
+            alt="Facebook" /></a>
+      </div>
     </div>
-  </body>
+
+    <p>
+      Squealers is a rock ’n’ roll band from Jyväskylä, Finland.
+      Our focus is on writing tight, riff-driven rock music.
+      Our 2023 debut EP Big Dog introduced a sound rooted in a simple yet effective groove.
+      Heavily influenced by AC/DC, we mix in covers with original compositions in our live show.
+      No flash, no hype — just solid rock, played right and played loud.
+    </p>
+    <img class="bandpic" src="src/testivedos.JPG" />
+    <iframe class="embedtube" src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+  </div>
+</body>
+
 </html>
