Taustan kanssa kikkailua, footer lisätty

--- a/forgig/index.html
+++ b/forgig/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="main">
     <div class="mainblock">
-      <img class="logo" src="../src/squealers_logo.svg" />
+      <img class="logo" src="../src/squealers_logo-cropped.svg" />
     </div>
     <div class="mainblock">
       <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
