--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-    rel="stylesheet" />
 </head>
 
 <body>
   <div class="main">
-    <div class="mainblock"> <img class="logo" src="./src/squealers_logo.svg" />
-    </div>
-    <div class="mainblock"> <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
+    <div class="mainblock"> <img class="logo" src="./src/squealers_logo-cropped.svg" />
     </div>
     <div class="mainblock">
       <div class="topbar">
@@ -57,7 +52,28 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+    <div class="mainblock">
+      <footer>
+        <img class="footerlogo" src="../src/squealers_logo-cropped.svg" />
+        <div class="copyright">
+          <div>©2025</div>
+          <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
+        </div>
+        <div class="bottombar">
 
+          <a
+            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"><img
+              src="./src/spotify-min.png" alt="Spotify" /></a>
+          <a href="https://music.apple.com/us/artist/squealers/1652739782"><img src="./src/itunes-min.png"
+              alt="Apple Music" /></a>
+          <a href="https://www.youtube.com/@Squealers_band"><img src="./src/tube-min.png" alt="YouTube" /></a>
+          <a href="https://www.deezer.com/en/artist/188899167"><img src="./src/deezer-min.png" alt="Deezer" /></a>
+          <a href="https://www.instagram.com/squealers_band/"><img src="./src/ig-min.png" alt="Instagram" /></a>
+          <a href="https://www.facebook.com/profile.php?id=100087154827305"><img src="./src/fb-min.png"
+              alt="Facebook" /></a>
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 
