Footer alasivulle. Bandikuvan uudelleen nimeäminen. Vielä ohuempi border

--- a/forgig/index.html
+++ b/forgig/index.html
@@ -20,7 +20,7 @@
       <img class="logo" src="../src/squealers_logo-cropped.svg" />
     </div>
     <div class="mainblock">
-      <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
+      Email: <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
     </div>
     <div class="mainblock">
       <div>
@@ -127,10 +127,31 @@
           <li>Taneli</li>
           <li>Jukka</li>
         </ul>
-        <img class="bandpic" src="../src/testivedos.JPG" />
+        <img class="bandpic" src="../src/bandi.JPG" />
       </div>
     </div>
+    <div class="mainblock">
+      <footer>
+        <img class="footerlogo" src="../src/squealers_logo-cropped.svg" />
+        <div class="copyright">
+          <div>©2025</div>
+          <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
+        </div>
+        <div class="bottombar">
 
+          <a
+            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"><img
+              src="../src/spotify-min.png" alt="Spotify" /></a>
+          <a href="https://music.apple.com/us/artist/squealers/1652739782"><img src="../src/itunes-min.png"
+              alt="Apple Music" /></a>
+          <a href="https://www.youtube.com/@Squealers_band"><img src="../src/tube-min.png" alt="YouTube" /></a>
+          <a href="https://www.deezer.com/en/artist/188899167"><img src="../src/deezer-min.png" alt="Deezer" /></a>
+          <a href="https://www.instagram.com/squealers_band/"><img src="../src/ig-min.png" alt="Instagram" /></a>
+          <a href="https://www.facebook.com/profile.php?id=100087154827305"><img src="../src/fb-min.png"
+              alt="Facebook" /></a>
+        </div>
+      </footer>
+    </div>
 
 
 
