--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         No flash, no hype — just solid rock, played right and played loud.
       </p>
     </div>
-    <div class="mainblock"> <img class="bandpic" src="src/testivedos.JPG" />
+    <div class="mainblock"> <img class="bandpic" src="src/bandi.JPG" />
     </div>
     <div class="mainblock"> <iframe class="embedtube"
         src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178" title="YouTube video player"
