Fonttien väriä, taustan väriä, video pienemmäksi

--- a/forgig/index.html
+++ b/forgig/index.html
@@ -20,7 +20,7 @@
       <img class="logo" src="../src/squealers_logo-cropped.svg" />
     </div>
     <div class="mainblock">
-      Email: <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
+      <div>Email: <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a></div>
     </div>
     <div class="mainblock">
       <div>
