--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="main">
-    <div class="mainblock"> <img class="logo" src="./src/squealers_logo-cropped.svg" />
+    <div class="mainblock"> <img class="logo" alt="SQUEALERS" src="./src/squealers_logo-cropped.svg" />
     </div>
     <div class="mainblock">
       <div class="topbar">
@@ -37,11 +37,12 @@
     </div>
     <div class="mainblock">
       <p>
-        Squealers is a rock ’n’ roll band from Jyväskylä, Finland.
-        Our focus is on writing tight, riff-driven rock music.
-        Our 2023 debut EP Big Dog introduced a sound rooted in a simple yet effective groove.
-        Heavily influenced by AC/DC, we mix in covers with original compositions in our live show.
-        No flash, no hype — just solid rock, played right and played loud.
+        Squeal&shy;ers is a rock ’n’ roll band from Jy&shy;­väs&shy;­ky­&shy;lä, Fin&shy;­land. Our fo&shy;cus is on
+        wri­ting tight,
+        riff-­driv&shy;en rock mu&shy;sic. Our 2023 de&shy;but EP Big Dog in&shy;tro­duced a sound roo­ted in a sim­ple
+        yet ef­fec&shy;tive groove. Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC, we mix in co­vers with
+        orig&shy;i&shy;nal com­posi­tions in our live show. No flash, no hype — just sol&shy;id rock, play­ed right and
+        play­ed loud.
       </p>
     </div>
     <div class="mainblock"> <img class="bandpic" src="src/bandi.JPG" />
