Tyylijuttuja etenkin fonttiin liittyen. Uusi svg pienempi

--- a/index.html
+++ b/index.html
@@ -1,81 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Squealers</title>
+    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Squealers</title>
-  <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-</head>
-
-<body>
-  <div class="main">
-    <div class="mainblock"> <img class="logo" alt="SQUEALERS" src="./src/squealers_logo-cropped.svg" />
-    </div>
-    <div class="mainblock">
-      <div class="topbar">
-        <div>
-          <h2>Listen now!</h2>
-          <a
-            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"><img
-              src="./src/spotify-min.png" alt="Spotify" /></a>
-          <a href="https://music.apple.com/us/artist/squealers/1652739782"><img src="./src/itunes-min.png"
-              alt="Apple Music" /></a>
-          <a href="https://www.youtube.com/@Squealers_band"><img src="./src/tube-min.png" alt="YouTube" /></a>
-          <a href="https://www.deezer.com/en/artist/188899167"><img src="./src/deezer-min.png" alt="Deezer" /></a>
-        </div>
-        <div>
-          <h2>Follow us!</h2>
-          <a href="https://www.instagram.com/squealers_band/"><img src="./src/ig-min.png" alt="Instagram" /></a>
-          <a href="https://www.facebook.com/profile.php?id=100087154827305"><img src="./src/fb-min.png"
-              alt="Facebook" /></a>
+  <body>
+    <div class="main">
+      <div class="mainblock">
+        <img class="logo" alt="SQUEALERS" src="./src/squealers_logo.svg" />
+      </div>
+      <div class="mainblock">
+        <div class="topbar">
+          <div>
+            <h2>Listen now!</h2>
+            <a
+              href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
+              ><img src="./src/spotify-min.png" alt="Spotify"
+            /></a>
+            <a href="https://music.apple.com/us/artist/squealers/1652739782"
+              ><img src="./src/itunes-min.png" alt="Apple Music"
+            /></a>
+            <a href="https://www.youtube.com/@Squealers_band"
+              ><img src="./src/tube-min.png" alt="YouTube"
+            /></a>
+            <a href="https://www.deezer.com/en/artist/188899167"
+              ><img src="./src/deezer-min.png" alt="Deezer"
+            /></a>
+          </div>
+          <div>
+            <h2>Follow us!</h2>
+            <a href="https://www.instagram.com/squealers_band/"
+              ><img src="./src/ig-min.png" alt="Instagram"
+            /></a>
+            <a href="https://www.facebook.com/profile.php?id=100087154827305"
+              ><img src="./src/fb-min.png" alt="Facebook"
+            /></a>
+          </div>
         </div>
       </div>
+      <div class="mainblock">
+        <p>
+          Squeal&shy;ers is a rock ’n’ roll band from
+          Jy&shy;­väs&shy;­ky­&shy;lä, Fin&shy;­land. Our fo&shy;cus is on
+          wri­ting tight, riff-­driv&shy;en rock mu&shy;sic. Our 2023 de&shy;but
+          EP Big Dog in&shy;tro­duced a sound roo­ted in a sim­ple yet
+          ef­fec&shy;tive groove. Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC,
+          we mix in co­vers with orig&shy;i&shy;nal com­posi­tions in our live
+          show. No flash, no hype — just sol&shy;id rock, play­ed right and
+          play­ed loud.
+        </p>
+      </div>
+      <div class="mainblock"><img class="bandpic" src="src/bandi.JPG" /></div>
+      <div class="mainblock">
+        <iframe
+          class="embedtube"
+          src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="mainblock">
+        <footer>
+          <img class="footerlogo" src="./src/squealers_logo.svg" />
+          <div class="copyright">
+            <div>©2025</div>
+            <a href="mailto:squealersbandi@gmail.com" class="email"
+              >squealersbandi@gmail.com</a
+            >
+          </div>
+          <div class="bottombar">
+            <a
+              href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
+              ><img src="./src/spotify-min.png" alt="Spotify"
+            /></a>
+            <a href="https://music.apple.com/us/artist/squealers/1652739782"
+              ><img src="./src/itunes-min.png" alt="Apple Music"
+            /></a>
+            <a href="https://www.youtube.com/@Squealers_band"
+              ><img src="./src/tube-min.png" alt="YouTube"
+            /></a>
+            <a href="https://www.deezer.com/en/artist/188899167"
+              ><img src="./src/deezer-min.png" alt="Deezer"
+            /></a>
+            <a href="https://www.instagram.com/squealers_band/"
+              ><img src="./src/ig-min.png" alt="Instagram"
+            /></a>
+            <a href="https://www.facebook.com/profile.php?id=100087154827305"
+              ><img src="./src/fb-min.png" alt="Facebook"
+            /></a>
+          </div>
+        </footer>
+      </div>
     </div>
-    <div class="mainblock">
-      <p>
-        Squeal&shy;ers is a rock ’n’ roll band from Jy&shy;­väs&shy;­ky­&shy;lä, Fin&shy;­land. Our fo&shy;cus is on
-        wri­ting tight,
-        riff-­driv&shy;en rock mu&shy;sic. Our 2023 de&shy;but EP Big Dog in&shy;tro­duced a sound roo­ted in a sim­ple
-        yet ef­fec&shy;tive groove. Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC, we mix in co­vers with
-        orig&shy;i&shy;nal com­posi­tions in our live show. No flash, no hype — just sol&shy;id rock, play­ed right and
-        play­ed loud.
-      </p>
-    </div>
-    <div class="mainblock"> <img class="bandpic" src="src/bandi.JPG" />
-    </div>
-    <div class="mainblock"> <iframe class="embedtube"
-        src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178" title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-    <div class="mainblock">
-      <footer>
-        <img class="footerlogo" src="../src/squealers_logo-cropped.svg" />
-        <div class="copyright">
-          <div>©2025</div>
-          <a href="mailto:squealersbandi@gmail.com" class="email">squealersbandi@gmail.com</a>
-        </div>
-        <div class="bottombar">
-
-          <a
-            href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"><img
-              src="./src/spotify-min.png" alt="Spotify" /></a>
-          <a href="https://music.apple.com/us/artist/squealers/1652739782"><img src="./src/itunes-min.png"
-              alt="Apple Music" /></a>
-          <a href="https://www.youtube.com/@Squealers_band"><img src="./src/tube-min.png" alt="YouTube" /></a>
-          <a href="https://www.deezer.com/en/artist/188899167"><img src="./src/deezer-min.png" alt="Deezer" /></a>
-          <a href="https://www.instagram.com/squealers_band/"><img src="./src/ig-min.png" alt="Instagram" /></a>
-          <a href="https://www.facebook.com/profile.php?id=100087154827305"><img src="./src/fb-min.png"
-              alt="Facebook" /></a>
-        </div>
-      </footer>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
