--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <p>
           Squeal&shy;ers is a rock ’n’ roll band from
           Jy&shy;­väs&shy;­ky­&shy;lä, Fin&shy;­land. Our fo&shy;cus is on
-          wri­ting tight, riff-­driv&shy;en rock mu&shy;sic. Our 2023 de&shy;but
-          EP Big Dog in&shy;tro­duced a sound roo­ted in a sim­ple yet
-          ef­fec&shy;tive groove. Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC,
-          we mix in co­vers with orig&shy;i&shy;nal com­posi­tions in our live
-          show. No flash, no hype — just sol&shy;id rock, play­ed right and
-          play­ed loud.
+          wri­ting tight, riff-­driv&shy;en rock mu&shy;sic.
+        </p>
+        <p>
+          Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC, we mix in co­vers with
+          orig&shy;i&shy;nal com­posi­tions in our live show. No flash, no hype
+          — just sol&shy;id rock, play­ed right and play­ed loud.
         </p>
       </div>
       <div class="mainblock"><img class="bandpic" src="src/bandi.JPG" /></div>
