tekstin jako kolmeen kappaleeseen

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
         </p>
         <p>
           Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC, we mix in co­vers with
-          orig&shy;i&shy;nal com­posi­tions in our live show. No flash, no hype
-          — just sol&shy;id rock, play­ed right and play­ed loud.
+          orig&shy;i&shy;nal com­posi­tions in our live show.
+        </p>
+        <p>
+          No flash, no hype — just sol&shy;id rock, play­ed right and play­ed
+          loud.
         </p>
       </div>
       <div class="mainblock"><img class="bandpic" src="src/bandi.JPG" /></div>
