Sivun alun bändilähtöisempi lähestymistapa testi

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
   <body>
     <div class="main">
-      <div class="mainblock">
-        <img class="logo" alt="SQUEALERS" src="./src/squealers_logo.svg" />
+      <div class="mainblock line">
+        <!-- 
+        <img class="logo" alt="SQUEALERS" src="./src/squealers_logo.svg" /> -->
+        <img class="logo" alt="SQUEALERS" src="./src/kollaasi_test.png" />
+        <small> Sol&shy;id rock, play­ed right and play­ed loud. </small>
       </div>
       <div class="mainblock">
         <div class="topbar">
@@ -54,12 +57,8 @@
           Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC, we mix in co­vers with
           orig&shy;i&shy;nal com­posi­tions in our live show.
         </p>
-        <p>
-          No flash, no hype — just sol&shy;id rock, play­ed right and play­ed
-          loud.
-        </p>
       </div>
-      <div class="mainblock"><img class="bandpic" src="src/bandi.JPG" /></div>
+      <!-- <div class="mainblock"><img class="bandpic" src="src/bandi.JPG" /></div> -->
       <div class="mainblock">
         <iframe
           class="embedtube"
