Lisää banneritesttailua, voi laittaa julkiseksi

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- 
         <img class="logo" alt="SQUEALERS" src="./src/squealers_logo.svg" /> -->
         <img class="logo" alt="SQUEALERS" src="./src/kollaasi_test.png" />
-        <small> Sol&shy;id rock, play­ed right and play­ed loud. </small>
+        <small> Solid rock 'n' roll, played right and loud </small>
       </div>
       <div class="mainblock">
         <div class="topbar">
