painike tyyppiseksi linkit, aika paljon sätöstä täytyy seuraavaksi siistiä

--- a/forgig/index.html
+++ b/forgig/index.html
@@ -162,7 +162,7 @@
               >squealersbandi@gmail.com</a
             >
           </div>
-          <div class="bottombar">
+          <div class="bottomicons">
             <a
               href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
               ><img src="../src/spotify-min.png" alt="Spotify"
