--- a/index.html
+++ b/index.html
@@ -19,31 +19,41 @@
         <small> Solid rock 'n' roll, played right and loud </small>
       </div>
       <div class="mainblock">
-        <div class="topbar">
+        <div class="calltogroups">
+          <h2>Listen now!</h2>
           <div>
-            <h2>Listen now!</h2>
             <a
               href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
-              ><img src="./src/spotify-min.png" alt="Spotify"
-            /></a>
-            <a href="https://music.apple.com/us/artist/squealers/1652739782"
-              ><img src="./src/itunes-min.png" alt="Apple Music"
-            /></a>
-            <a href="https://www.youtube.com/@Squealers_band"
-              ><img src="./src/tube-min.png" alt="YouTube"
-            /></a>
-            <a href="https://www.deezer.com/en/artist/188899167"
-              ><img src="./src/deezer-min.png" alt="Deezer"
-            /></a>
+              class="callbutton"
+              ><img src="./src/spotify-min.png" alt="Spotify" />Spotify</a
+            >
+            <a
+              href="https://music.apple.com/us/artist/squealers/1652739782"
+              class="callbutton"
+              ><img src="./src/itunes-min.png" alt="Apple Music" />Apple
+              Music</a
+            >
+            <a href="https://www.youtube.com/@Squealers_band" class="callbutton"
+              ><img src="./src/tube-min.png" alt="YouTube" />YouTube</a
+            >
+            <a
+              href="https://www.deezer.com/en/artist/188899167"
+              class="callbutton"
+              ><img src="./src/deezer-min.png" alt="Deezer" />Deezer</a
+            >
           </div>
+          <h2>Follow us!</h2>
           <div>
-            <h2>Follow us!</h2>
-            <a href="https://www.instagram.com/squealers_band/"
-              ><img src="./src/ig-min.png" alt="Instagram"
-            /></a>
-            <a href="https://www.facebook.com/profile.php?id=100087154827305"
-              ><img src="./src/fb-min.png" alt="Facebook"
-            /></a>
+            <a
+              href="https://www.instagram.com/squealers_band/"
+              class="callbutton"
+              ><img src="./src/ig-min.png" alt="Instagram" />Instagram</a
+            >
+            <a
+              href="https://www.facebook.com/profile.php?id=100087154827305"
+              class="callbutton"
+              ><img src="./src/fb-min.png" alt="Facebook" />Facebook</a
+            >
           </div>
         </div>
       </div>
@@ -79,7 +89,7 @@
               >squealersbandi@gmail.com</a
             >
           </div>
-          <div class="bottombar">
+          <div class="bottomicons">
             <a
               href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
               ><img src="./src/spotify-min.png" alt="Spotify"
