--- a/index.html
+++ b/index.html
@@ -4,72 +4,99 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Squealers</title>
-    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
+    <link rel="icon" href="/src/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-
   <body>
-    <div class="main">
-      <div class="mainblock line">
-        <!-- 
-        <img class="logo" alt="SQUEALERS" src="./src/squealers_logo.svg" /> -->
-        <img class="logo" alt="SQUEALERS" src="./src/kollaasi_test.png" />
-        <small> Solid rock 'n' roll, played right and loud </small>
-      </div>
-      <div class="mainblock">
-        <div class="calltogroups">
+    <main class="main flex-col flex-center gap-10px">
+      <!-- Logo & slogan -->
+      <section class="mainblock line flex-col flex-center">
+        <img class="logo" alt="Squealers band logo" src="./src/kollaasi.png" />
+        <small>Solid rock 'n' roll, played right and loud</small>
+      </section>
+
+      <!-- Listen & Follow CTAs -->
+      <section class="mainblock flex-col flex-center gap-10px">
+        <nav class="calltogroups flex-center">
           <h2>Listen now!</h2>
-          <div>
-            <a
-              href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
-              class="callbutton"
-              ><img src="./src/spotify-min.png" alt="Spotify" />Spotify</a
-            >
-            <a
-              href="https://music.apple.com/us/artist/squealers/1652739782"
-              class="callbutton"
-              ><img src="./src/itunes-min.png" alt="Apple Music" />Apple
-              Music</a
-            >
-            <a href="https://www.youtube.com/@Squealers_band" class="callbutton"
-              ><img src="./src/tube-min.png" alt="YouTube" />YouTube</a
-            >
-            <a
-              href="https://www.deezer.com/en/artist/188899167"
-              class="callbutton"
-              ><img src="./src/deezer-min.png" alt="Deezer" />Deezer</a
-            >
-          </div>
+          <ul class="calltogroups-list">
+            <li>
+              <a
+                href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR"
+                class="callbutton"
+                ><img src="./src/spotify-min.png" alt="Spotify" />Spotify</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://music.apple.com/us/artist/squealers/1652739782"
+                class="callbutton"
+                ><img src="./src/itunes-min.png" alt="Apple Music" />Apple
+                Music</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/@Squealers_band"
+                class="callbutton"
+                ><img src="./src/tube-min.png" alt="YouTube" />YouTube</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.deezer.com/en/artist/188899167"
+                class="callbutton"
+                ><img src="./src/deezer-min.png" alt="Deezer" />Deezer</a
+              >
+            </li>
+            <li>
+              <a href="https://tidal.com/artist/35359610" class="callbutton"
+                ><img src="./src/tidal-min.png" alt="Tidal" />Tidal</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://music.amazon.com/artists/B0BLB4RZ4M/squealers"
+                class="callbutton"
+                ><img src="./src/amazon-min.png" alt="Amazon" />Amazon Music</a
+              >
+            </li>
+          </ul>
+
           <h2>Follow us!</h2>
-          <div>
-            <a
-              href="https://www.instagram.com/squealers_band/"
-              class="callbutton"
-              ><img src="./src/ig-min.png" alt="Instagram" />Instagram</a
-            >
-            <a
-              href="https://www.facebook.com/profile.php?id=100087154827305"
-              class="callbutton"
-              ><img src="./src/fb-min.png" alt="Facebook" />Facebook</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="mainblock">
+          <ul class="calltogroups-list">
+            <li>
+              <a
+                href="https://www.instagram.com/squealers_band/"
+                class="callbutton"
+                ><img src="./src/ig-min.png" alt="Instagram" />Instagram</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.facebook.com/profile.php?id=100087154827305"
+                class="callbutton"
+                ><img src="./src/fb-min.png" alt="Facebook" />Facebook</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </section>
+
+      <!-- About band -->
+      <section class="mainblock flex-col gap-10px">
         <p>
-          Squeal&shy;ers is a rock ’n’ roll band from
-          Jy&shy;­väs&shy;­ky­&shy;lä, Fin&shy;­land. Our fo&shy;cus is on
-          wri­ting tight, riff-­driv&shy;en rock mu&shy;sic.
+          Squeal&shy;ers is a rock ’n’ roll band from Jy&shy;väs&shy;ky­&shy;lä,
+          Finland. Our focus is on writing tight, riff-driven rock music.
         </p>
         <p>
-          Heav&shy;i&shy;ly in­flu&shy;en­ced by AC/DC, we mix in co­vers with
-          orig&shy;i&shy;nal com­posi­tions in our live show.
+          Heavily influenced by AC/DC, we mix in covers with original
+          compositions in our live show.
         </p>
-      </div>
-      <!-- <div class="mainblock"><img class="bandpic" src="src/bandi.JPG" /></div> -->
-      <div class="mainblock">
+      </section>
+
+      <!-- YouTube embed -->
+      <section class="mainblock flex-col flex-center">
         <iframe
           class="embedtube"
           src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178"
@@ -78,40 +105,51 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
-        ></iframe>
-      </div>
-      <div class="mainblock">
-        <footer>
-          <img class="footerlogo" src="./src/squealers_logo.svg" />
-          <div class="copyright">
-            <div>©2025</div>
-            <a href="mailto:squealersbandi@gmail.com" class="email"
-              >squealersbandi@gmail.com</a
-            >
-          </div>
-          <div class="bottomicons">
-            <a
-              href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR?si=gMUPU4soSjWhgHFuqIljAw&nd=1&dlsi=4a3f5e65d531427a"
+        >
+        </iframe>
+      </section>
+
+      <!-- Footer -->
+      <footer class="mainblock flex-col flex-center gap-10px">
+        <img
+          class="footerlogo"
+          src="./src/squealers_logo.svg"
+          alt="Squealers band logo"
+        />
+        <div class="copyright flex-center gap-5">
+          <div>©2025</div>
+          <a href="mailto:squealersbandi@gmail.com" class="email"
+            >squealersbandi@gmail.com</a
+          >
+        </div>
+        <ul class="bottomicons flex gap-5">
+          <li>
+            <a href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR"
               ><img src="./src/spotify-min.png" alt="Spotify"
             /></a>
+          </li>
+          <li>
             <a href="https://music.apple.com/us/artist/squealers/1652739782"
               ><img src="./src/itunes-min.png" alt="Apple Music"
             /></a>
+          </li>
+          <li>
             <a href="https://www.youtube.com/@Squealers_band"
               ><img src="./src/tube-min.png" alt="YouTube"
             /></a>
-            <a href="https://www.deezer.com/en/artist/188899167"
-              ><img src="./src/deezer-min.png" alt="Deezer"
-            /></a>
+          </li>
+          <li>
             <a href="https://www.instagram.com/squealers_band/"
               ><img src="./src/ig-min.png" alt="Instagram"
             /></a>
+          </li>
+          <li>
             <a href="https://www.facebook.com/profile.php?id=100087154827305"
               ><img src="./src/fb-min.png" alt="Facebook"
             /></a>
-          </div>
-        </footer>
-      </div>
-    </div>
+          </li>
+        </ul>
+      </footer>
+    </main>
   </body>
 </html>
